--- a/index.html
+++ b/index.html
@@ -27,20 +27,26 @@
 </head>
 
 <body class="">
-  
+
   <header class="header">
     <nav class="navbar container flex flex-aic flex-jcsb">
       <img class="crowdfundlogo" src="images/logo.svg" alt="Crowdfund logo">
       <img class="hamburger" onclick="togglemenu()" src="images/icon-hamburger.svg" alt="icon-hamburger">
       <div class="overlay mobilemenu flex flex-jcc">
-          <div class="menu flex flex-fdc flex-jcc content_ainer border_r">
-            <a href="#"><div class="menu__items flex flex-aic">Discover</div></a>
-            <a href="#"><div class="menu__items flex flex-aic">About</div></a>
-            <a href="#"><div class="menu__items flex flex-aic">Get Started</div></a>
-          </div>
+        <div class="menu flex flex-fdc flex-jcc content_ainer border_r">
+          <a onclick="togglemenu()" href="#">
+            <div class="menu__items flex flex-aic">Discover</div>
+          </a>
+          <a onclick="togglemenu()" href="#About">
+            <div class="menu__items flex flex-aic">About</div>
+          </a>
+          <a onclick="togglemenu()" href="#">
+            <div class="menu__items flex flex-aic">Get Started</div>
+          </a>
+        </div>
       </div>
       <div class="navlinks flex flex-jcsb flex-aic">
-        <a href="#">About</a><a href="#">Discover</a><a href="#">Get Started</a>
+        <a href="#About">About</a><a href="#">Discover</a><a href="#">Get Started</a>
       </div>
     </nav>
   </header>
@@ -53,20 +59,39 @@
         <h1>Master Bamboo Monitor Riser</h1>
         <p class="tagline">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
         <div class="boxend flex flex-jcsb flex-aic">
-          <div onclick="togglesupportbox()" href="#" class="button backproject flex flex-aic flex-jcc">Back this project</div>
-          <div class="button bookmark flex flex-aic">
-            <div class="circle">
-              <img src="images/icon-bookmark.svg" alt="bookmark button">
-            </div>
+          <div onclick="togglebackprojectoverlay()" href="#" class="button backproject flex flex-aic flex-jcc">Back this
+            project</div>
+          <div onclick="togglebookmark()" class="button bookmark flex flex-aic">
+            <svg width="56" height="56" class="bookmarkicon" xmlns="http://www.w3.org/2000/svg">
+              <g fill="none" fill-rule="evenodd">
+                <circle fill="#2f2f2f" cx="28" cy="28" r="28" />
+                <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+              </g>
+            </svg>
             <p>Bookmark</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="box box2 border_r"></div>
-    <div class="box box3 border_r flex flex-fdc flex-aic box1">
+    <div class="box box2 border_r flex-jcc flex flex-fdc flex-aic">
+      <div class="flex content_ainer flex-jcsb box2__head">
+        <div class="box2__headmain tcent flex flex-jcc flex-fdc">
+          <span>$89,914</span>of $100,000 backed
+        </div>
+        <div class="box2__headmain tcent flex flex-jcc flex-fdc">
+          <span>5007</span>total backers
+        </div>
+        <div class="box2__headmain tcent flex flex-jcc flex-fdc" style="border: none;">
+          <span>56</span>days left
+        </div>
+      </div>
+      <!-- <div class="progressbar">
+        <div class="progressfill" style="height:8px;width:83%"></div>
+      </div> -->
+    </div>
+    <div class="box box3 border_r flex flex-fdc flex-aic">
       <div class="content_ainer">
-        <h2>About this project</h2>
+        <h2 id="About">About this project</h2>
         <p class="para">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen
           to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve
           your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
@@ -78,24 +103,24 @@
       <div class="content_ainer pricingbox border border_r">
         <div class="pricehead flex flex-jcsb flex-aic">
           <h3>Bamboo Stand</h3>
-          <span class="pledge">Pledge $25 or more</span>
+          <span onclick="togglesupportbox()" class="pledge">Pledge $25 or more</span>
         </div>
         <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
           you’ll be added to a special Backer member list.</p>
         <div class="boxend2 flex flex-jcsb flex-aic">
-          <p class="flex price_left  flex-aic"><span class="price">101&nbsp;</span>left</p>
+          <p class="flex price_left flex-aic"><span class="price">101&nbsp;</span>left</p>
           <div class="button reward flex flex-aic flex-jcc">Select Reward</div>
         </div>
       </div>
       <div class="content_ainer pricingbox border border_r">
         <div class="pricehead flex flex-jcsb flex-aic">
           <h3>Black Edition Stand</h3>
-          <span class="pledge">Pledge $75 or more</span>
+          <span onclick="togglesupportbox()" class="pledge">Pledge $75 or more</span>
         </div>
         <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
           member list. Shipping is included.</p>
         <div class="boxend2 flex flex-jcsb flex-aic">
-          <p class="flex price_left  flex-aic"><span class="price">64&nbsp;</span>left</p>
+          <p class="flex price_left flex-aic"><span class="price">64&nbsp;</span>left</p>
           <div class="button reward flex flex-aic flex-jcc">Select Reward</div>
         </div>
       </div>
@@ -112,20 +137,86 @@
         </div>
       </div>
 
-    </section>
-    <div class="overlay thanksforsupport flex flex-aic flex-jcc">
-      <div class="supportbox border_r flex flex-aic">
-        <img src="images/icon-check.svg" alt="tick icon">
-        <div class="flex content_ainer flex-fdc flex-aic">
+  </section>
+
+  <div class="overlay thanksforsupport flex flex-aic flex-jcc">
+    <div class="supportbox border_r flex flex-aic">
+      <img src="images/icon-check.svg" alt="tick icon">
+      <div class="flex content_ainer flex-fdc flex-aic">
         <h3>Thanks for Your Support</h3>
-        <p class="tcent ">Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+        <p class="tcent ">Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide.
+          You will get
           an email once our campaign is completed.</p>
-        </div>
-        <div onclick="closesupportbox()" class="button gotit flex flex-aic flex-jcc">Got it!</div>
       </div>
-      
+      <div onclick="closesupportbox()" class="button gotit flex flex-aic flex-jcc">Got it!</div>
     </div>
-    <script src="/app/js/script.js"></script>
+  </div>
+
+  <div class="overlay backprojectoverlay flex flex-aic flex-jcc">
+    <div class="backprojectmodal container border_r ">
+      <!-- <img class="closemodal" onclick="closebackprojectoverlay()" src="images/icon-close-modal.svg" alt="close modal"> -->
+      <svg width="15" class="closemodal" onclick="closebackprojectoverlay()" height="15"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z"
+          fill="#000" fill-rule="evenodd" opacity="0.4" />
+      </svg>
+      <div class="container modalcontainer flex flex-fdc">
+        <div class="modalheadingdiv">
+          <h3>Back This Project</h3>
+          <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+        </div>
+        <div class="backprojectmodalboxes border border_r">
+          <div class="flex pricehead flec-fdc flex flex-aic">
+            <span class="pledge">Pledge with no reward</span>
+          </div>
+          <p>Choose to support us without a reward if you simply believe in our project. As a backer,
+            you will be signed up to receive product updates via email.</p>
+        </div>
+        <div class="backprojectmodalboxes  border border_r">
+          <div class="flex pricehead flec-fdc flex flex-aic flex-jcsb">
+            <div class="flex pricehead flec-fdc flex flex-aic">
+              <h4>Bamboo Stand</h4>
+              <span class="pledge">Pledge $25 or more</span>
+            </div>
+            <p class="flex pl1 flex-aic"><span class="price">101&nbsp;</span>left</p>
+          </div>
+          <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+            you’ll be added to a special Backer member list.</p>
+          <p class="flex pl2 flex-aic"><span class="price">101&nbsp;</span>left</p>
+        </div>
+        <div class="backprojectmodalboxes border border_r">
+          <div class="flex pricehead flec-fdc flex flex-aic flex-jcsb">
+            <div class="flex pricehead flec-fdc flex flex-aic">
+              <h4>Black Special Edition</h4>
+              <span class="pledge">Pledge $75 or more</span>
+            </div>
+            <p class="flex pl1 flex-aic"><span class="price">64&nbsp;</span>left</p>
+          </div>
+          <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+            member list. Shipping is included.</p>
+          <p class="flex pl2 flex-aic"><span class="price">64&nbsp;</span>left</p>
+        </div>
+        <div class="backprojectmodalboxes border border_r disabled">
+          <div class="flex pricehead flec-fdc flex flex-aic flex-jcsb">
+            <div class="flex pricehead flec-fdc flex flex-aic">
+              <h4>Mahogany Special Edition</h4>
+              <span class="pledge">Pledge $200 or more</span>
+            </div>
+            <p class="flex pl1 flex-aic"><span class="price">0&nbsp;</span>left</p>
+          </div>
+          <p> You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+            to our Backer member list. Shipping is included.</p>
+          <p class="flex pl2 flex-aic"><span class="price">0&nbsp;</span>left</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by Priyansh Patidar.
+  </div>
+  <script src="app/js/script.js"></script>
 </body>
 
 </html>
